--- a/src/components/Listings/Listings.css
+++ b/src/components/Listings/Listings.css
@@ -39,6 +39,13 @@
 .btm-mrg-20 {
   margin-bottom: 20px!important;
 }
+.mrg-20 {
+  margin: 20px 0px 20px 0px !important;
+}
+
+.flt-right{
+  float:right;
+}
 
 a {  
     text-decoration: none!important;
@@ -46,19 +53,19 @@ a {
 
 /**** MEDIA QUERIES ****/
 @media only screen and (max-width: 991px) {
-  #property-listings .property-listing {
+  #property-listings .listings .property-listing {
       padding: 5px!important;
   }
-  #property-listings .property-listing a {
-      margin: 0;
+  #property-listings .listings .property-listing a {
+      margin: 0; 
   }
-  #property-listings .property-listing .media-body {
+  #property-listings .listings .property-listing .media-body {
       padding: 10px;
   }
 }
 
 @media only screen and (min-width: 992px) {
-  #property-listings .property-listing img {
+  #property-listings .listings .property-listing img {
       max-width: 180px;
   }
 }
